# robotica_ws

./: .gitignore
src/rm_description/: CMakeLists.txt  casa.sdf  package.xml
src/rm_description/launch/: display.launch.py  gazebo_casa.launch.py
src/rm_description/urdf/: gazebo_control.xacro  macros.xacro  properties.xacro  robot.urdf.xacro  robot.xacro  urdf.urdf
src/rm_description/world/: casa.sdf
