<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <!-- Nome do pacote (deve ser único no workspace) -->
  <name>rm_description</name>
  <version>1.0.0</version>
  <description>APS 1: Robótica Móvel Autônoma</description>

  <!-- Informações do mantenedor -->
  <maintainer email="victorialgs@al.insper.edu.br">user</maintainer>
  <license>TODO: License declaration</license>

  <!-- Sistema de build utilizado -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <!-- Dependências do pacote serão adicionadas aqui -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
